nuevos metodos, todavia no camina corretamente